<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000BCD4"
    android:backgroundTint="#2E29ADFF"
    android:backgroundTintMode="add"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/settings"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="172dp"
        android:layout_height="160dp"
        android:layout_marginTop="85dp"
        android:src="@drawable/toolbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="222dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/button"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:backgroundTint="#2962FF"
            android:text="@string/speed_test" />

        <Button
            android:id="@+id/button3"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:backgroundTint="#2962FF"
            android:text="@string/ip_calculator" />

        <Button
            android:id="@+id/btnTraceRoute"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:backgroundTint="#2962FF"
            android:text="@string/trace_route" />

        <Button
            android:id="@+id/button4"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:backgroundTint="#2962FF"
            android:text="@string/ssh_telnet" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>